tests/negative/neg_receive_target_not_null.safe
-- Test: neg_receive_target_not_null
-- Description: Access-typed channel elements are rejected before receive-target ownership checks run.
-- Expected: REJECT source_frontend_error

package Neg_Receive_Target_Not_Null

   type Payload is record
      Value : Integer;

   type Payload_Ptr is access Payload;

   channel Data_Ch : Payload_Ptr capacity 1;

   function Run
      Target : Payload_Ptr = new ((Value = 2) as Payload);

      receive Data_Ch, Target;

